ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akhq-ingress
  namespace: kafka-hq
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - kafka-hq.wittyshizard.dev
        - kafka.wittyshizard.dev
      secretName: kafka-hq-tls
  rules:
    - host: kafka-hq.wittyshizard.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: akhq
                port:
                  number: 8080
